tests/snapshots/examples_fixtures/type_classes__derived_parameterized_eq.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/derived_parameterized_eq.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
