tests/snapshots/examples_fixtures/type_classes__diagnosed_constraint.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/diagnosed_constraint.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
