tests/snapshots/examples_fixtures/type_classes__dictionary_call_arity.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/dictionary_call_arity.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
