tests/snapshots/examples_fixtures/type_classes__effectful_fmap.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/effectful_fmap.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
