tests/snapshots/examples_fixtures/type_classes__either_instances.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/either_instances.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
