tests/snapshots/examples_fixtures/type_classes__eq_ord.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/eq_ord.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
