tests/snapshots/examples_fixtures/type_classes__functor_applicative_monad.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/functor_applicative_monad.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
