tests/snapshots/examples_fixtures/type_classes__generalized_constraint_obligation.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/generalized_constraint_obligation.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
