tests/snapshots/examples_fixtures/type_classes__generalized_structured_constraint.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/generalized_structured_constraint.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
