tests/snapshots/examples_fixtures/type_classes__hkt_instance_positive.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/hkt_instance_positive.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
